# sonic-client

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml  config.toml.example
backend/src/: config.rs  decryption.rs  encryption.rs  error.rs  external.rs  jobs.rs  kms_decrypt.rs  kms_decrypt_b.rs  main.rs  session.rs  state.rs
backend/src/routes/: auth.rs  jobs.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js  style.css
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
